Blurring background pictures in the cart, fix #53

--- a/style/map.css
+++ b/style/map.css
@@ -116,7 +116,7 @@ body.loading .modal {
 }
 
 .drawer-title{
-	font-family: "Helvetica","Trebuchet MS",sans;
+	font-family: "Helvetica", "Trebuchet MS", sans-serif;
 	font-size: 22px;
 	text-decoration: none;
 	text-align:center;
@@ -154,7 +154,6 @@ body.loading .modal {
 
 .POPUP_title {
 	font-weight: bold;
-	margin: auto;
 	text-align: center;
 	margin: 5px !important;
 }
@@ -186,8 +185,10 @@ body.loading .modal {
 
 .buttonDrawerActive {
 	background-color: #ff6e70 !important;
+	/*
 	font-size: 2em;
 	padding: 10px;
+	*/
 }
 
 
@@ -209,8 +210,7 @@ body.loading .modal {
 
 #POI_CART_FOOTER {
 	text-align: center;
-	margin: auto;
-	margin-top: 5px;
+	margin: 5px auto auto;
 	background-color: rgba(137, 160, 195, 0.8);
 	padding: 10px;
 }
@@ -223,24 +223,46 @@ body.loading .modal {
 	color: #555;
 }
 
-.eltCart {
-	font-family: "Calibri",Sans;
-	text-shadow: 2px 1px 2px rgba(150, 150, 150, 1);
-	width: 100%;
-	border-bottom: 2px solid rgb(248,99,99);
-	min-height: 74px;
-	margin: auto;
-	text-align: center;
-	background-size: cover;
-
+.eltCart{
+	overflow-y: hidden;	/* To cut the background */
+	position: relative;
 }
 
-.eltCartContent{
-    background-color: rgba(255,255,255,0.85);
+.eltCartBlur{
+	position: absolute;
+
+	width: 100%;
+	height: 400px; /* "big" value to fullfill the element */
+
+	/* The background url is given inline in JS */
+	background-size: cover;
+	background-position: center; 
+
+	/* Fallback to SVG filters */
+	filter: url('../images/design/blur.svg#blur');
+	/* Normal filter */	
+	-webkit-filter: blur(2px);
+	-moz-filter: blur(2px);
+	-o-filter: blur(2px);
+	-ms-filter: blur(2px);
+	filter: blur(2px);
+}
+
+.eltCartContent {
+	position: relative;
+	width: 100%;
+	margin: auto;
+	text-align: center;
+	min-height: 74px;
+
+	font-family: "Calibri", sans-serif;
+	border-bottom: 2px solid rgb(248,99,99);
+	
+	background-color: rgba(255,255,255,0.7); /* To lighten blurred background */
 }
 
 .eltCartNumber {
-	font-family: "Helvetica","Trebuchet MS";
+	font-family: "Helvetica", "Trebuchet MS", sans-serif;
 	border-radius: 3px;
 	float: left;
 	margin: 30px 5px 5px;
